manifests/vas/vas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vas
  name: vas
  namespace: vas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vas
  strategy: {}
  template:
    metadata:
      labels:
        app: vas
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vas-pvc
      containers:
      - image: immauss/openvas
        name: openvas
        ports:
        - containerPort: 9392
        volumeMounts:
        - name: data  
          mountPath: /data
        resources: {}
