manifests/vas/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vas-ingress
  namespace: vas
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: vas.example.com
    http:
      paths:
      - backend:
          service:
            name: vas
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
